TheXTech Changelog.

Changes for 1.3.5.1
-Episodes and battle levels lists now loading in the separated thread with a progress showing
-Fixed the regression caused world map music not being switched properly

Changes for 1.3.5
-Fixed the gamepad control stuck because of axes returned value that doesn't equal the initial state on some devices
-Fixed the invalid conversion of old sprites with a mask that is smaller than the front
-Implemented usage of the SDL_GameController with some extras like using the rumble and the battery status (Render of the status is not implemented yet)
-Player now can quit the credits screen by pressing the Start button on the gamepad
-Fixed the glitched rendering of the first frame at the main menu and at the world map when frame-skip is enabled
-Every gamepad model will keep its individual settings per player
-Added the "Reset to default" menu item to reset controls
-Resolved the slow work of the world map on weak devices
-Added the performance debug printing that you can activate by the F3 key
-Automatically select the gamepad on startup if the user didn't manually set up the keyboard usage
-Added the ability of the hot connection and disconnection of game controllers
-Control mappings have been moved into the "controls.ini" to keep the "thextech.ini" file being human-friendly
-Swooper can play the flap sound if presented at the assets pack
-Iceball may have the individual shoot sound of sounds.ini enables that
-Fixed an unexpected ability of Peach to spin-jump from off vines and on pressing of the ALT-JUMP while the JUMP key is held
-Fixed the GFX shaking of the upside-down piranha plants when they got customized in some cases
-NPC freezing sound got an individual sound instead of the shell hit
-Frozen NPC breaking got an individual sound
-Added an ability to put the silence instead of the actual sound file by specifying the "silent=true" field instead of the "file=..."
-Thwomps will slightly shake the screen on their fall